update: game details
